adição da fonte no html

--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -29,7 +29,7 @@
         <footer id="footer">
             <p>
             <section id="creditos">
-            Desenvolvido por: Danielle Guimarães, Julia Simão, Mariana Ribeiro, Vitória Carteri.<br/>
+            Desenvolvido por: Danielle Guimarães, Julia Simão, Mariana Ribeiro e Vitória Carteri.<br/>
             Projeto TWIST-2024
             </section>
             <section id="versao">
