Principal-SobreNos-Prontas

--- a/htmls/index.html
+++ b/htmls/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="style/home.css">
+    <link rel="stylesheet" href="/style/home.css">
 </head>
 <body>
     <div id="conteudo">
         <header>
             <nav>
-                <a href="sobre-nos.html" id="sobreNos"><b>Sobre nós</b></a>
+                <a href="/htmls/sobre-nos.html" id="sobreNos"><b>Sobre nós</b></a>
             </nav>
         </header>
-        <img id="logo" src="img/fluffy-luff.png" alt="logo fluffy luffy.">
+        <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
         <h1>
             Fluffy Luff
         </h1>
@@ -23,7 +23,7 @@
         </h2>
 
         <nav id="navExplorar">
-            <a href="principal.html" id="explorar"><b>Explorar</b></a>
+            <a href="/htmls/principal.html" id="explorar"><b>Explorar</b></a>
         </nav>
        
         <section id ="main">
