--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -14,7 +14,7 @@
             <nav id="menu">
             <a href="#">Voltar</a>
                 <a href="#">Categoria</a>
-                    <input type="text" name="texto" id="texto" placeholder="Pesquisar produto"></input>
+                    <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff"></input>
                 <a href="#">Favoritos</a>
                 <a href="#">Carrinho</a>
             </nav>
