--- a/htmls/carrinho-de-compras.html
+++ b/htmls/carrinho-de-compras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="/img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="/style/carrinho.css">
 </head>
 <body>
     <div id="conteudo">
@@ -19,11 +19,17 @@
                 <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
             </nav>
         </header>
+        <br/><br/><br/><br/><br/><br/>
         <section id ="main">
-            <h1>
-            </h1>
-            <div>
-
+            <div class="produto">
+                <img class="imgProduto" src="#" alt="Imagem do produto" >
+                <p class="nomeProduto" >*Nome Produto*</p>
+                <div class="quantidade">
+                    <button class="quantidadeBtn" onclick="mudarQuantidade(-1)">-</button>
+                    <input type="number" id="quantidadeInput" value="1" min="1">
+                    <button class="quantidadeBtn" onclick="mudarQuantidade(1)">+</button>
+                  </div>
+                  <p class="preco"> R$: xx,xx </p>
             </div>
         </section>
         <footer id="footer">
