mudanças feitas: adicionando o link do javaScript no html principal, adicionando a busca por categoria, nome e material e tratamento de pesquisa (sem acentos e lower case)

--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -6,6 +6,7 @@
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="../img/fluffy-luff.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/pagamento-e-dados.css">
+    <script src="../scripts/leitura-e-busca-json.js"></script>
 </head>
 <body>
     <div id="conteudo">
@@ -22,7 +23,7 @@
         <section id ="main">
             <h1>
             </h1>
-            <div>
+            <div id="au">
 
             </div>
         </section>
