--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="../img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="../style/estilo-base.css">
 </head>
 <body>
     <div id="conteudo">
@@ -37,8 +37,8 @@
             Versão do site: 1.0
             </section>
             </p>
-            <a id="github" href="https://github.com/twistpucrio/fluffy-luff" target="_blank">
-                <img src="../img/github.png" alt="logo do github." width="30" height="30">
+            <a href="https://github.com/twistpucrio/fluffy-luff" target="_blank">
+                <img  id="github" src="../img/github.png" alt="logo do github.">
             </a>        
         </footer>
     </div>
