--- a/htmls/sobre-nos.html
+++ b/htmls/sobre-nos.html
@@ -52,9 +52,12 @@
         <h1 id="projeto">
             O projeto:
         </h1>
-        <p>lalalalalalalalalalallalalalalalalalalalallalalalalalalalalalal <br/>
-            lalalalalalalalalalallalalalalalalalalalallalalalalalalalalalal <br/>
-            lalalalalalalalalalallalalalalalalalalalallalalalalalalalalalal</p>
+        <p> Estamos desenvolvendo um projeto E-commerce como um challenge de <br/> programação da Twist
+            envolvendo HTML, CSS e JS. Dessa forma, os requisitos <br/>do projeto são Tags 
+            Semânticas, CSS Externo, JS Externo e<br/> conter acessibilidade. Nosso site 
+            venderá bichinhos de pelúcia, atendendo todos os requisitos<br/> para esse projeto,
+            Pelúcias de todos os cantos, abraços de todo o mundo! 
+            </p>
         
     </div>
 </body>
