--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -24,7 +24,9 @@
             <h1>
             </h1>
             <div>
-
+                <button id="btnAdicionar">Adicionar Produto</button>
+                <button id="btnRemover">Remover Produto</button>
+                <button id="btnExibir">Exibir Produto</button>
             </div>
         </section>
         <footer id="footer">
