Adicionado todos os ids e classes nas tags.

--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -20,27 +20,27 @@
             </nav>
         </header>
         <section id ="main">
-           <div id="imagemBotoes">
-                <div id="imagem">
+           <div id="imagem-botoes">
+                <div id="img-produto">
                     
                 </div>
-                <button id="addFavoritos">Adicionar aos favoritos</button>
-                <button id="addCarrinho">Adicionar no carrinho</button>
+                <button id="add-favoritos">Adicionar aos favoritos</button>
+                <button id="add-carrinho">Adicionar no carrinho</button>
            </div>
-           <div>
-                <h3>
+           <div id="dados-produto">
+                <h3 id="nome-produto" >
                     *Nome do Produto*
                 </h3>
-                <div>
+                <div class="dados-produto" id="preco-produto">
                     <h5>Preço: </h5>
                 </div>
-                <div>
+                <div class="dados-produto" id="descricao-produto">
                     <h5>Descrição: </h5>
                 </div>
-                <div>
+                <div class="dados-produto" id="avaliacao-produto">
                     <h5>Avaliação: </h5>
                 </div>
-                <div>
+                <div class="dados-produto" id="comentarios-produto">
                     <h5>Comentários: </h5>
                 </div>
            </div>
