--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -6,6 +6,10 @@
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="../img/fluffy-luff.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/estilo-base.css">
+    <link rel="stylesheet" href="../style/principal.css">
+    <script src="../scripts/leitura-e-busca-json.js"></script>
+    <script src="../scripts/cria-elemento.js"></script>
+
 
 </head>
 <body>
