commit sla - julia

--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="/img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="../style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="../style/produto.css">
 </head>
 <body>
     <div id="conteudo">
@@ -42,6 +43,16 @@
                 </div>
                 <div class="dados-produto" id="comentarios-produto">
                     <h5>Comentários: </h5>
+                </div>
+                
+                <!-- <figure>
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBgCPQmyPHrOWxnUvbmQIRwOipjW8woZUreA&s" alt="">
+                    <figcaption>blablabla</figcaption>
+                </figure> 
+                <br><br>-->
+                <div class="elemento" id="">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBgCPQmyPHrOWxnUvbmQIRwOipjW8woZUreA&s" alt="">
+                    <p>blablabla</p>
                 </div>
            </div>
         </section>
