--- a/htmls/carrinho-de-compras.html
+++ b/htmls/carrinho-de-compras.html
@@ -11,12 +11,13 @@
     <div id="conteudo">
         <header id="header">
             <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
+
             <nav id="menu">
-            <a href="/htmls/index.html">Voltar</a>
+            <a href="/htmls/principal.html">Voltar</a>
                 <a href="#">Categoria</a>
                     <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff"></input>
-                <a href="#">Favoritos</a>
-                <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
+                <a href="/htmls/favoritos.html">Favoritos</a>
+                
             </nav>
         </header>
         <br/><br/><br/><br/><br/><br/>
