--- a/htmls/favoritos.html
+++ b/htmls/favoritos.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favoritos</title>
-    <link rel="stylesheet" href="style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="/style/estilo-base.css">
 </head>
 <body>
     <div id="container">
         <header id="header">
-            <img id="logo" src="img/fluffy-luff.png" alt="logo fluffy luffy.">
+            <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
-                <a href="#">Voltar</a>
+                <a href="/htmls/principal.html">Voltar</a>
                 <a href="#">Categoria</a>
                     <input type="text" placeholder="Pesquisar produto">
-                <a href="#">Favoritos</a>
-                <a href="#">Carrinho</a>
+                
+                <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
             </nav>
         </header>
         <section id ="main"></section>
@@ -35,7 +35,7 @@
                 </p>
             </section>
             <a id="github" href="https://github.com/twistpucrio/fluffy-luff" target="_blank">
-                <img src="img/github.png" alt="logo do github." width="30" height="30">
+                <img src="/img/github.png" alt="logo do github." width="30" height="30">
             </a>        
         </footer>
     </div>
