--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="../img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="/style/estilo-base.css">
     <script src="../scripts/leitura-e-busca-json.js"></script>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <a href="/htmls/index.html">Voltar</a>
                 <a href="#">Categoria</a>
                     <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff"></input>
-                <a href="#">Favoritos</a>
+                <a href="/htmls/favoritos.html">Favoritos</a>
                 <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
             </nav>
         </header>
