Adicionando os códigos da lógica de url e id do projeto.

--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="/img/fluffy-luff.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/pagamento-e-dados.css">
     <link rel="stylesheet" href="../style/produto.css">
+    
+    <script src="../scripts/leitura-e-busca-json.js"></script>
+    <script src="../scripts/produto.js"></script>
 </head>
 <body>
     <div id="conteudo">
