Adicionando a estilização da imagem e do botão.

--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -25,8 +25,10 @@
                 <div id="img-produto">
                     
                 </div>
-                <button id="add-favoritos">Adicionar aos favoritos</button>
-                <button id="add-carrinho">Adicionar no carrinho</button>
+                <div id="botoes">
+                    <button class="btn" id="add-favoritos">Adicionar aos favoritos</button>
+                    <button class="btn" id="add-carrinho">Adicionar no carrinho</button>
+                </div>
            </div>
            <div id="dados-produto">
                 <h3 id="nome-produto" >
@@ -43,16 +45,6 @@
                 </div>
                 <div class="dados-produto" id="comentarios-produto">
                     <h5>Comentários: </h5>
-                </div>
-                
-                <!-- <figure>
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBgCPQmyPHrOWxnUvbmQIRwOipjW8woZUreA&s" alt="">
-                    <figcaption>blablabla</figcaption>
-                </figure> 
-                <br><br>-->
-                <div class="elemento" id="">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSBgCPQmyPHrOWxnUvbmQIRwOipjW8woZUreA&s" alt="">
-                    <p>blablabla</p>
                 </div>
            </div>
         </section>
