Fundo fixado na página sobre nós

--- a/htmls/sobre-nos.html
+++ b/htmls/sobre-nos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style/home.css">
+    <link rel="stylesheet" href="/style/sobrenos.css">
 </head>
 <body>
     <div id="conteudo">
@@ -52,7 +52,7 @@
         <h1 id="projeto">
             O projeto:
         </h1>
-        <p> Estamos desenvolvendo um projeto E-commerce como um challenge de <br/> programação da Twist
+        <p id="descricao"> Estamos desenvolvendo um projeto E-commerce como um challenge de <br/> programação da Twist
             envolvendo HTML, CSS e JS. Dessa forma, os requisitos <br/>do projeto são Tags 
             Semânticas, CSS Externo, JS Externo e<br/> conter acessibilidade. Nosso site 
             venderá bichinhos de pelúcia, atendendo todos os requisitos<br/> para esse projeto,
