--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="/img/fluffy-luff.png" type="image/x-icon">
-    <link rel="stylesheet" href="../style/pagamento-e-dados.css">
+    <link rel="stylesheet" href="../style/estilo-base.css">
     <link rel="stylesheet" href="../style/produto.css">
     
     <script src="../scripts/leitura-e-busca-json.js"></script>
