--- a/htmls/carrinho-de-compras.html
+++ b/htmls/carrinho-de-compras.html
@@ -6,6 +6,8 @@
     <title>Fluffy Luff</title>
     <link rel="shortcut icon" href="/img/fluffy-luff.png" type="image/x-icon">
     <link rel="stylesheet" href="/style/carrinho.css">
+    <script src="/scripts/leitura-e-busca-json.js"></script>
+    <script src="/scripts/criaCarrinho.js"></script>
 </head>
 <body>
     <div id="conteudo">
@@ -22,16 +24,7 @@
         </header>
         <br/><br/><br/><br/><br/><br/>
         <section id ="main">
-            <div class="produto">
-                <img class="imgProduto" src="#" alt="Imagem do produto" >
-                <p class="nomeProduto" >*Nome Produto*</p>
-                <div class="quantidade">
-                    <button class="quantidadeBtn" onclick="mudarQuantidade(-1)">-</button>
-                    <input type="number" id="quantidadeInput" value="1" min="1">
-                    <button class="quantidadeBtn" onclick="mudarQuantidade(1)">+</button>
-                  </div>
-                  <p class="preco"> R$: xx,xx </p>
-            </div>
+          
         </section>
         <footer id="footer">
             <p>
