acessibilidade quase pronta

--- a/htmls/carrinho-de-compras.html
+++ b/htmls/carrinho-de-compras.html
@@ -13,13 +13,25 @@
             <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
 
             <nav id="menu">
-            <a href="/htmls/principal.html">Voltar</a>
-                <a href="#">Categoria</a>
-                    <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff"></input>
-                <a href="/htmls/favoritos.html">Favoritos</a>
-                
+            <a href="/htmls/principal.html" aria-label="Clique aqui para voltar para página anterior.">Voltar</a>
+                <a href="#" aria-label="Clique aqui para obter o pop-up de categorias de
+                produtos do nosso site.">Categoria</a>
+                    <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff" aria-label="Clique 
+                    aqui para escrever oque deseja pesquisar."></input>
+                <a href="/htmls/favoritos.html" aria-label="Clique aqui para ir ao seus favoritos.">Favoritos</a>
             </nav>
         </header>
+        <section id ="main"></section>
+            <h1>
+            </h1>
+            <a href="principal.html" aria-label="Clique aqui para ir para a página do produto.">
+                <div class="moldura-produto" aria-labelledby="capivara">
+                    <img class="imagem-produto" src="../img/capivara.webp" alt="Uma pelúcia de capivara 
+                    marrom com um sorriso bobo e olhinhos fechados no fundo branco."/>
+                </div>
+            </a>
+        </section>
+
         <br/><br/><br/><br/><br/><br/>
         <section id ="main">
             <div class="produto">
