--- a/htmls/favoritos.html
+++ b/htmls/favoritos.html
@@ -11,11 +11,12 @@
         <header id="header">
             <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
-                <a href="/htmls/principal.html">Voltar</a>
+                <a href="/htmls/principal.html" aria-label="Clique aqui para voltar 
+                para página anterior.">Voltar</a>
                 <a href="#">Categoria</a>
-                    <input type="text" placeholder="Pesquisar produto">
-                
-                <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
+                <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff" aria-label="Clique 
+                aqui para escrever oque deseja pesquisar."></input>
+                <a href="/htmls/carrinho-de-compras.html" aria-label="Clique aqui para ir ao seu carrinho de compras.">Carrinho</a>
             </nav>
         </header>
         <section id ="main"></section>
