--- a/htmls/index.html
+++ b/htmls/index.html
@@ -11,7 +11,8 @@
     <div id="conteudo">
         <header>
             <nav>
-                <a href="/htmls/sobre-nos.html" id="sobreNos"><b>Sobre nós</b></a>
+                <a href="/htmls/sobre-nos.html" id="sobreNos" aria-label="Clique aqui para 
+                ler sobre nós."><b>Sobre nós</b></a>
             </nav>
         </header>
         <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
@@ -23,7 +24,7 @@
         </h2>
 
         <nav id="navExplorar">
-            <a href="/htmls/principal.html" id="explorar"><b>Explorar</b></a>
+            <a href="/htmls/principal.html" id="explorar" aria-label="Clique aqui para ir explorar."><b>Explorar</b></a>
         </nav>
        
         <section id ="main">
