--- a/htmls/pagamento-e-dados.html
+++ b/htmls/pagamento-e-dados.html
@@ -12,7 +12,8 @@
         <header id="header">
             <img id="logo" src="../img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
-            <a id="voltarcarrinho" href="#">Voltar</a>
+            <a id="voltarcarrinho" href="/htmls/principal.html" aria-label="Clique aqui 
+            para voltar para página anterior.">Voltar</a>
             </nav>
         </header>
         <section id ="main">
