--- a/htmls/sobre-nos.html
+++ b/htmls/sobre-nos.html
@@ -11,7 +11,7 @@
     <div id="conteudo">
         <header>
             <nav>
-                <a href="/htmls/index.html" id="voltar"><b>Voltar</b></a>
+                <a href="/htmls/index.html" id="voltar" aria-label="Clique aqui para voltar para página anterior."><b>Voltar</b></a>
             </nav>
         </header>
         <div id="logoGeral">
@@ -58,7 +58,6 @@
             venderá bichinhos de pelúcia, atendendo todos os requisitos<br/> para esse projeto,
             Pelúcias de todos os cantos, abraços de todo o mundo! 
             </p>
-        
     </div>
 </body>
 </html>
