--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -13,14 +13,16 @@
 </head>
 <body>
     <div id="conteudo">
-        <header id="header">
+        <header id="header"></header>
             <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
-            <a href="/htmls/index.html">Voltar</a>
-                <a href="#">Categoria</a>
-                    <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff"></input>
-                <a href="#">Favoritos</a>
-                <a href="/htmls/carrinho-de-compras.html">Carrinho</a>
+            <a href="/htmls/principal.html" aria-label="Clique aqui para voltar para página anterior.">Voltar</a>
+                <a href="#" aria-label="Clique aqui para obter o pop-up de categorias de
+                produtos do nosso site.">Categoria</a>
+                    <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff" aria-label="Clique 
+                    aqui para escrever oque deseja pesquisar."></input>
+                <a href="/htmls/favoritos.html" aria-label="Clique aqui para ir ao seus favoritos.">Favoritos</a>
+                <a href="/htmls/carrinho-de-compras.html"  aria-label="Clique aqui para ir ao seu carrinho de compras.">Carrinho</a>
             </nav>
         </header>
         <section id ="main">
