Teminando a estilização dos dados do produto.

--- a/htmls/produto.html
+++ b/htmls/produto.html
@@ -33,21 +33,21 @@
                     <button class="btn" id="add-carrinho">Adicionar no carrinho</button>
                 </div>
            </div>
-           <div id="dados-produto">
-                <h3 id="nome-produto" >
+           <div id="dados-produtos">
+                <p id="nome-produto" >
                     *Nome do Produto*
-                </h3>
+                </p>
                 <div class="dados-produto" id="preco-produto">
-                    <h5>Preço: </h5>
+                    <p>Preço: </p>
                 </div>
                 <div class="dados-produto" id="descricao-produto">
-                    <h5>Descrição: </h5>
+                    <p>Descrição: </p>
                 </div>
                 <div class="dados-produto" id="avaliacao-produto">
-                    <h5>Avaliação: </h5>
+                    <p>Avaliação: </p>
                 </div>
                 <div class="dados-produto" id="comentarios-produto">
-                    <h5>Comentários: </h5>
+                    <p>Comentários: </p>
                 </div>
            </div>
         </section>
