--- a/htmls/principal.html
+++ b/htmls/principal.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="conteudo">
-        <header id="header"></header>
+        <header id="header">
             <img id="logo" src="/img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
             <a href="/htmls/principal.html" aria-label="Clique aqui para voltar para página anterior.">Voltar</a>
