--- a/htmls/favoritos.html
+++ b/htmls/favoritos.html
@@ -13,7 +13,18 @@
             <nav id="menu">
                 <a href="/htmls/principal.html" aria-label="Clique aqui para voltar 
                 para página anterior.">Voltar</a>
-                <a href="#">Categoria</a>
+                <ul>
+                    <li class="dropdown">
+                        <a href="#" class="dropbtn" id="categoria" aria-label="Clique aqui para obter o pop-up de categorias de
+                        produtos do nosso site.">Categorias</a>
+                        <div class="dropdown-content">
+                            <a href="#">Terrestre</a>
+                            <a href="#">Aquático</a>
+                            <a href="#">Voador</a>
+                            <a href="#">Outros</a>
+                        </div>
+                    </li>
+                </ul>
                 <input type="text" name="texto" id="texto" placeholder="Pesquisar em Fluffy Luff" aria-label="Clique 
                 aqui para escrever oque deseja pesquisar."></input>
                 <a href="/htmls/carrinho-de-compras.html" aria-label="Clique aqui para ir ao seu carrinho de compras.">Carrinho</a>
