Js carrinho pronto

--- a/htmls/pagamento-e-dados.html
+++ b/htmls/pagamento-e-dados.html
@@ -12,7 +12,7 @@
         <header id="header">
             <img id="logo" src="../img/fluffy-luff.png" alt="logo fluffy luffy.">
             <nav id="menu">
-            <a id="voltarcarrinho" href="/htmls/principal.html" aria-label="Clique aqui 
+            <a id="voltarcarrinho" href="/htmls/carrinho-de-compras.html" aria-label="Clique aqui 
             para voltar para página anterior.">Voltar</a>
             </nav>
         </header>
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <br/>
-            <br/>
+           
         </section>
         <footer id="footer">
             <p>
