Adicionando a logica do favoritos e fazendo o manipulando json funcionar

--- a/htmls/favoritos.html
+++ b/htmls/favoritos.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favoritos</title>
     <link rel="stylesheet" href="/style/estilo-base.css">
+    <link rel="stylesheet" href="../style/principal.css">
+    <script src="../scripts/leitura-e-busca-json.js" ></script>
+    <script src="../scripts/manipulando-json.js"></script>
+    <script src="../scripts/criaFavoritos.js"></script>
 </head>
 <body>
     <div id="container">
